# PythonSoundwaveVisualizer

./: .gitignore  LICENSE  README.md  download_youtube_mp3.py  main.py  pyproject.toml  requirements.txt  soundwave_visualizer.spec
.github/workflows/: publish-pypi.yml  release-publish.yml  release.yml
soundwave_visualizer/: __init__.py  cli.py  defaults.py  visualizer.py
soundwave_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
