[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundwave-visualizer"
version = "0.1.0"
description = "FFT-based polar soundwave visualizer with preview and video export"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["audio", "visualization", "matplotlib", "fft", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "librosa>=0.9",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=22",
]

[project.scripts]
soundwave-visualizer = "soundwave_visualizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soundwave_visualizer*"]
